--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,37 @@
-version: '3'
+version: "3"
 services:
   db:
-    image: postgres
+    image: postgres:latest
     restart: always
     ports:
-      - '5432:5432'
+      - "${DATABASE_PORT}:${DATABASE_PORT}"
     environment:
       POSTGRES_DB: postgres-db
       POSTGRES_PASSWORD: postgres-pwd
       POSTGRES_USER: postgres-usr
+    networks:
+      - db-net
+  server:
+    image: node:18-alpine
+    build: ./server
+    depends_on:
+      - db
+    networks:
+      - db-net
+      - server-net
+    ports:
+      - "${APP_PORT}:${APP_PORT}"
+    environment:
+      - APP_PORT=${APP_PORT}
+      - DATABASE_NAME=${DATABASE_NAME}
+      - DATABASE_USERNAME=${DATABASE_USERNAME}
+      - DATABASE_PASSWORD=${DATABASE_PASSWORD}
+      - DATABASE_HOST=${DATABASE_HOST}
+      - DATABASE_PORT=${DATABASE_PORT}
+      - PRODUCTION_MODE=${PRODUCTION_MODE}
+
+networks:
+  db-net:
+    driver: bridge
+  server-net:
+    driver: bridge
