Removed unnecessary vars, edited .env

--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ DATABASE_USERNAME="postgres-usr"
 DATABASE_PASSWORD="postgres-pwd"
 DATABASE_HOST="db"
 DATABASE_PORT="5432"
-PRODUCTION_MODE="false"
+NODE_ENV="development"
