--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,7 @@ services:
       - DATABASE_PASSWORD=${DATABASE_PASSWORD}
       - DATABASE_HOST=${DATABASE_HOST}
       - DATABASE_PORT=${DATABASE_PORT}
-      - PRODUCTION_MODE=${PRODUCTION_MODE}
+      - NODE_ENV=${NODE_ENV}
 
 networks:
   db-net:
