Added app gateway

--- a/server/.env
+++ b/server/.env
@@ -5,3 +5,4 @@ DATABASE_PASSWORD="postgres-pwd"
 DATABASE_HOST="localhost"
 DATABASE_PORT="5432"
 NODE_ENV="development"
+CLIENT_URI="localhost:8080"
