--- a/server/package.json
+++ b/server/package.json
@@ -27,8 +27,10 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/mapped-types": "^1.2.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-socket.io": "^9.2.1",
     "@nestjs/terminus": "^9.1.4",
     "@nestjs/typeorm": "^9.0.1",
+    "@nestjs/websockets": "^9.2.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "pg": "^8.8.0",
