--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -26,6 +26,7 @@
       "@features/*": ["./features/*"],
       "@entities/*": ["./entities/*"],
       "@processes/*": ["./processes/*"],
+      "@widgets/*": ["./widgets/*"],
       "@shared/*": ["./shared/*"],
       "@ui/*": ["./shared/ui/*"]
     }
