--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -21,12 +21,9 @@
 
     "paths": {
       "@app/*": ["./app/*"],
+      "@components/*": ["./components/*"],
       "@assets/*": ["./assets/*"],
       "@pages/*": ["./pages/*"],
-      "@features/*": ["./features/*"],
-      "@entities/*": ["./entities/*"],
-      "@processes/*": ["./processes/*"],
-      "@widgets/*": ["./widgets/*"],
       "@shared/*": ["./shared/*"],
       "@ui/*": ["./shared/ui/*"]
     }
