--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -20,6 +20,7 @@
     "noFallthroughCasesInSwitch": false,
     "strictPropertyInitialization": false,
     "paths": {
+      "@/*": ["./src/*"],
       "@app/*": ["./src/app/*"],
       "@users/*": ["./src/users/*"],
       "@auth/*": ["src/auth/*"],
